# Alloy-OS

./: .gdbinit  .gitignore  Makefile  README.md  RECT_USAGE_EXAMPLES.rs  build-toolchain.sh
.github/workflows/: build-and-test.yml  nightly.yml  quick-check.yml  release.yml  update-screenshot.yml
boot/: boot.asm  grub.cfg  multiboot2.asm
kernel/: linker.ld
kernel/cpp/arch/: context.h  cpu.cpp  cpu.h  syscall.cpp  syscall.h
kernel/cpp/arch/x86_64/: context_switch.asm  gdt.cpp  gdt_flush.asm  idt.cpp  idt_stubs.asm  syscall_entry.asm
kernel/cpp/boot/: main.cpp  multiboot2.h  types.h
kernel/cpp/drivers/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  serial.cpp  timer.cpp  timer.h  vesa.cpp  vesa.h  vga.cpp  vga.h
kernel/cpp/mm/: paging.cpp  paging.h  pmm.cpp  pmm.h  vmm.cpp  vmm.h
kernel/cpp/rust/: rust_ffi.cpp
kernel/rust/: Cargo.toml  i686-alloy.json
kernel/rust/src/: allocator.rs  display_server.rs  ffi.rs  heap.rs  lib.rs  panic.rs  slab.rs  sync.rs
kernel/rust/src/fusion/: backend.rs  compositor.rs  framebuffer.rs  manager.rs  mod.rs  surface.rs  terminal.rs
kernel/rust/src/graphics/: color.rs  framebuffer.rs  mod.rs  text.rs  vesa.rs
os/display/: Cargo.toml  lib.rs
os/display/apps/: desktop_shell.rs  mod.rs  toolbox_apps.rs  window_manager.rs
os/display/client/: mod.rs
os/display/protocol/: mod.rs
os/display/server/: mod.rs
os/terminal/: Cargo.toml
os/terminal/src/: app.rs  commands.rs  framebuffer_renderer.rs  main.rs  splash_renderer.rs  theme.rs  ui.rs
os/terminal/src/ui/: mod.rs  theme.rs  view_manager.rs
os/terminal/src/ui/views/: help.rs  logs.rs  mod.rs  monitor.rs  splash.rs  system_stats.rs  terminal.rs
tools/: capture_desktop_screenshot.py  mouse_smoke.py
(+18 files in other folders)
