[package]
name = "alloy-os-terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alloy-terminal"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["debug"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
