[package]
name = "alloy-os-terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alloy-terminal"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["iced", "tokio"]
kernel-headless = []

[dependencies]
iced = { version = "0.12", features = ["debug", "image"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
image = "0.24"
usvg = "0.40"
tiny-skia = "0.11"

[dev-dependencies]

[[bin]]
name = "test-splash-renderer"
path = "src/bin/test_splash_renderer.rs"
